[package]
edition = "2018"
name = "ra_db"
version = "0.1.0"
authors = ["rust-analyzer developers"]

[lib]
doctest = false

[dependencies]
salsa = { git = "https://github.com/nikomatsakis/salsa", rev = "b66eb8131191a12ba9d2a0b14760d8f0b60bdffd" }
relative-path = "1.0.0"
rustc-hash = "1.1.0"

ra_syntax = { path = "../ra_syntax" }
ra_cfg = { path = "../ra_cfg" }
ra_prof = { path = "../ra_prof" }
ra_tt = { path = "../ra_tt" }
test_utils = { path = "../test_utils" }
vfs = { path = "../vfs" }
stdx = { path = "../stdx" }
