[package]
edition = "2018"
name = "ra_db"
version = "0.1.0"
authors = ["rust-analyzer developers"]

[lib]
doctest = false

[dependencies]
salsa = { git = "https://github.com/salsa-rs/salsa", rev = "d2e9f64bda58f9ce9d3e729d497f4d57f35dc368" }
relative-path = "1.0.0"
rustc-hash = "1.1.0"

ra_syntax = { path = "../ra_syntax" }
ra_cfg = { path = "../ra_cfg" }
ra_prof = { path = "../ra_prof" }
ra_tt = { path = "../ra_tt" }
test_utils = { path = "../test_utils" }
vfs = { path = "../vfs" }
stdx = { path = "../stdx" }
